--- a/how-to-speed-up-slow-windows-10.html
+++ b/how-to-speed-up-slow-windows-10.html
@@ -110,8 +110,7 @@
 
         <footer>
             <p>&copy; 2026 TechFix Center. All rights reserved.</p>
-            <p><a href="privacy-policy.html">Privacy Policy</a> | <a href="contact.html">Contact Us</a> | <a
-                    href="sitemap.xml">Sitemap</a></p>
+            <p><a href="about.html">About Us</a> | <a href="privacy-policy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a> | <a href="contact.html">Contact Us</a> | <a href="sitemap.xml">Sitemap</a></p>
         </footer>
     </div>
     <script src="js/main.js"></script>
