--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 
             <h2>Email Us</h2>
             <p>You can email us directly at:</p>
-            <p><strong>contact@techfix.com</strong></p>
+            <p><strong>contact@techfixcenter.com</strong></p>
 
             <p>We try to respond to all emails within 24-48 hours.</p>
 
