--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -25,7 +25,7 @@
             <h1>Privacy Policy</h1>
             <p>Last updated: February 13, 2026</p>
 
-            <p>At TechFix, accessible from techfix.com, one of our main priorities is the privacy of our
+            <p>At TechFix, accessible from techfixcenter.com, one of our main priorities is the privacy of our
                 visitors. This Privacy Policy document contains types of information that is collected and recorded by
                 TechFix and how we use it.</p>
 
