--- a/fix-iphone-black-screen-but-still-on.html
+++ b/fix-iphone-black-screen-but-still-on.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fix iPhone Black Screen But Phone Still On - TechFix Center</title>
-    <meta name="description" content="iPhone screen is black but it still rings and vibrates? The phone is on but the display is dead. Fix the black screen of death in 3 minutes. - TechFix Center">
+    <meta name="description"
+        content="iPhone screen is black but it still rings and vibrates? The phone is on but the display is dead. Fix the black screen of death in 3 minutes. - TechFix Center">
     <link rel="stylesheet" href="css/style.css">
     <link rel="canonical" href="https://techfixcenter.com/fix-iphone-black-screen-but-still-on.html">
 </head>
@@ -31,6 +32,19 @@
 
             <p class="intro">If your iPhone rings and vibrates but the screen is black, the display driver has likely
                 crashed. Your screen is not broken. You can fix this immediately with a forced hardware restart.</p>
+
+            <h2>Quick Fix (Try This First – 30 Seconds)</h2>
+            <div class="callout-box callout-critical">
+                <strong>Force Restart Method (Works for iPhone 8, X, 11, 12, 13, 14, 15, 16):</strong>
+                <ol style="margin-top: 10px; margin-bottom: 0;">
+                    <li>Press and quickly release <strong>Volume Up</strong>.</li>
+                    <li>Press and quickly release <strong>Volume Down</strong>.</li>
+                    <li>Press and hold the <strong>Side Button</strong> (Power) until you see the Apple Logo (approx.
+                        10-20 seconds).</li>
+                </ol>
+                <p style="margin-top: 10px; margin-bottom: 0;"><em>Ignore the "slide to power off" slider if it appears.
+                        Keep holding.</em></p>
+            </div>
 
             <h2>The Problem</h2>
             <p>The iPhone is running, but the display driver has crashed. It's like a TV that is turned on but showing a
@@ -110,18 +124,36 @@
                     <li><a href="iphone-hub.html"><strong>&larr; Back to iPhone Fix Hub</strong></a></li>
                     <li><a href="fix-iphone-wont-turn-on.html">Fix iPhone Won't Turn On</a></li>
                     <li><a href="fix-iphone-stuck-on-apple-logo.html">Fix Stuck on Apple Logo</a></li>
+                    <li><a href="fix-iphone-screen-flickering.html">Fix iPhone Screen Flickering</a></li>
                 </ul>
             </section>
         </main>
 
-        <footer>
-                        <p>
-                <a href="about.html">About Us</a> |
-                <a href="privacy-policy.html">Privacy Policy</a> |
-                <a href="terms.html">Terms of Service</a> |
-                <a href="contact.html">Contact Us</a> |
-                <a href="sitemap.xml">Sitemap</a>
-            </p>
+                <footer>
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Popular iPhone Fixes</h3>
+                    <ul>
+                        <li><a href="fix-iphone-black-screen-but-still-on.html">Fix iPhone Black Screen</a></li>
+                        <li><a href="fix-iphone-not-charging-after-update.html">Fix iPhone Not Charging</a></li>
+                        <li><a href="fix-iphone-storage-full-but-empty.html">Fix System Data Full</a></li>
+                        <li><a href="fix-iphone-keeps-restarting.html">Fix iPhone Restart Loop</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>TechFix Center</h3>
+                    <ul>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="terms.html">Terms of Service</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="sitemap.xml">Sitemap</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2026 TechFix Center. All rights reserved.</p>
+            </div>
         </footer>
     </div>
 </body>
