--- a/fix-iphone-wont-update-ios.html
+++ b/fix-iphone-wont-update-ios.html
@@ -138,9 +138,31 @@
             </ul>
         </section>
 
-        <footer>
-            <p>&copy; 2026 TechFix Center. All rights reserved.</p>
-            <p><a href="about.html">About Us</a> | <a href="privacy-policy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a> | <a href="contact.html">Contact Us</a> | <a href="sitemap.xml">Sitemap</a></p>
+                <footer>
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Popular iPhone Fixes</h3>
+                    <ul>
+                        <li><a href="fix-iphone-black-screen-but-still-on.html">Fix iPhone Black Screen</a></li>
+                        <li><a href="fix-iphone-not-charging-after-update.html">Fix iPhone Not Charging</a></li>
+                        <li><a href="fix-iphone-storage-full-but-empty.html">Fix System Data Full</a></li>
+                        <li><a href="fix-iphone-keeps-restarting.html">Fix iPhone Restart Loop</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>TechFix Center</h3>
+                    <ul>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="terms.html">Terms of Service</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="sitemap.xml">Sitemap</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2026 TechFix Center. All rights reserved.</p>
+            </div>
         </footer>
     </div>
     <script src="js/main.js"></script>
